--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -372,16 +372,16 @@
                                             </md-not-found>
                                         </md-autocomplete>
                                     </div>
-                                    <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 30% !important;">
+                                    <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 35% !important;">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">    
                                             <label>Service From</label>
-                                            <md-datepicker ng-model="claim.serviceFrom" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                            <md-datepicker ng-model="claim.serviceFrom" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                                         </md-input-container>
                                     </div>
-                                    <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 30% !important;">
+                                    <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 35% !important;">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">    
                                             <label>Service To</label>
-                                            <md-datepicker ng-model="claim.serviceTo" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                            <md-datepicker ng-model="claim.serviceTo" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                                         </md-input-container>
                                     </div>
                                     <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 20% !important;">
