info section validation in reimbursment claim while submit for approval changes

--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -22,61 +22,61 @@
                                     <div class="accordion-input">
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Primary Diagnosis</label>
+                                                <label>Primary Diagnosis<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.primaryDiagnosis" ng-value="'501.02'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Primary Diagnosis Disc</label>
+                                                <label>Primary Diagnosis Disc<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.primaryDiagDisc" ng-value="'Surgery'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Secondary Diagnosis (ICD)</label>
+                                                <label>Secondary Diagnosis (ICD)<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.secDiagnosis" ng-value="'301.2,508.2'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Secondary Diagnosis Description</label>
+                                                <label>Secondary Diagnosis Description<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.secDiagnosisDesc">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Provider Name</label>
+                                                <label>Provider Name<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.providerName" ng-value="'Alnoor Hospital'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Provider Code</label>
+                                                <label>Provider Code<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.providerCode" ng-value="'4341'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Provider License</label>
+                                                <label>Provider License<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.providerLicense" ng-value="'MF28291'">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Voucher Number</label>
+                                                <label>Voucher Number<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.voucherNumber">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Encounter Type</label>
-                                                <input type="text" ng-model="providerDetails.providerNetwork" ng-value="'Inpatient'">
+                                                <label>Encounter Type<font color="red">*</font></label>
+                                                <input type="text" ng-model="providerDetails.encounterType">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Claim Type</label>
+                                                <label>Claim Type<font color="red">*</font></label>
                                                 <input type="text" ng-model="providerDetails.claimType" ng-value="'Elective'">
                                             </md-input-container>
                                         </div>
@@ -108,8 +108,8 @@
                                     <div class="accordion-input">
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Event Country</label>
-                                                <input type="text" ng-model="claimDetails.country" ng-value="'Dubai'">
+                                                <label>Event Country<font color="red">*</font></label>
+                                                <input type="text" ng-model="claimDetails.country">
                                             </md-input-container>
                                         </div>
                                     </div>
@@ -138,7 +138,7 @@
                                         </div> -->
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Claim Condition</label>
+                                                <label>Claim Condition<font color="red">*</font></label>
                                                 <input type="text" ng-model="policyDetails.claimCondition" ng-value="'Special Case/Ex-Gratia'">
                                             </md-input-container>
                                         </div>
@@ -188,25 +188,25 @@
                                     <div class="accordion-input">
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Member Name</label>
+                                                <label>Member Name<font color="red">*</font></label>
                                                 <input type="text" ng-model="memberDetails.memberName" ng-value="'Khalifa'" ng-disabled="true">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Member No</label>
+                                                <label>Member No<font color="red">*</font></label>
                                                 <input type="text" ng-model="memberDetails.memberNo" ng-value="'500001-1-A'" ng-disabled="true">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Category</label>
+                                                <label>Category<font color="red">*</font></label>
                                                 <input type="text" ng-model="memberDetails.category" ng-value="'B'" ng-disabled="true">
                                             </md-input-container>
                                         </div>
                                         <div class="fldsWrap clearfix">
                                             <md-input-container flex-gt-sm>    
-                                                <label>Gender</label>
+                                                <label>Gender<font color="red">*</font></label>
                                                 <input type="text" ng-model="memberDetails.gender" ng-value="'Male'" ng-disabled="true">
                                             </md-input-container>
                                         </div>
@@ -214,7 +214,7 @@
                                             <div class="fldsWrap clearfix">
                                                 <md-input-container flex-gt-sm>    
                                                     <label>Age</label>
-                                                    <input type="text" ng-model="memberDetails.age" ng-value="'52'" ng-disabled="true">
+                                                    <input type="number" ng-model="memberDetails.age" ng-value="'52'" ng-disabled="true">
                                                 </md-input-container>
                                             </div>
                                             <div class="fldsWrap clearfix">
@@ -550,7 +550,7 @@
             </div>
             
             <footer class="clearfix">
-                <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="approveClaim();">Submit for Approval</button>
+                <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3 mt-3" ng-click="submitForApproval();">Submit for Approval</button>
                 <button type="button" class="btn btn-outline-primary btn-sm float-right ml-3  mt-3" ng-click="rejectClaim();">Reject</button>
                 <ul class="float-right clearfix mt-1">
                     <li class="float-left">
