--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -158,7 +158,7 @@
                                             <div class="fldsWrap clearfix">
                                                 <md-input-container flex-gt-sm>    
                                                     <label>Policy Start</label>
-                                                    <md-datepicker ng-model="policyDetails.policyStart" md-hide-icons="all" md-open-on-focus ng-disabled="true"></md-datepicker>
+                                                    <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="policyDetails.policyStart" md-hide-icons="all" md-open-on-focus ng-disabled="true"></md-datepicker>
                                                 </md-input-container>
                                             </div>
                                             <div class="fldsWrap clearfix">
@@ -226,13 +226,13 @@
                                             <div class="fldsWrap clearfix">
                                                 <md-input-container flex-gt-sm>    
                                                     <label>Member Terminated Date</label>
-                                                    <md-datepicker ng-model="memberDetails.memberTerminatedDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                                    <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="memberDetails.memberTerminatedDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
                                                 </md-input-container>
                                             </div>
                                             <div class="fldsWrap clearfix">
                                                 <md-input-container flex-gt-sm>    
                                                     <label>Member Start Date</label>
-                                                    <md-datepicker ng-model="memberDetails.memberStartDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
+                                                    <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="memberDetails.memberStartDate" md-hide-icons="all" md-open-on-focus></md-datepicker>
                                                 </md-input-container>
                                             </div>
                                             <div class="fldsWrap clearfix">
@@ -373,15 +373,15 @@
                                         </md-autocomplete>
                                     </div>
                                     <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 35% !important;">
-                                        <md-input-container flex-gt-sm style="margin-top: 18px;" readonly= true>    
+                                        <md-input-container flex-gt-sm style="margin-top: 18px;">    
                                             <label>Service From</label>
-                                            <md-datepicker ng-model="claim.serviceFrom" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
+                                            <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="claim.serviceFrom" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                                         </md-input-container>
                                     </div>
                                     <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 35% !important;">
                                         <md-input-container flex-gt-sm style="margin-top: 18px;">    
                                             <label>Service To</label>
-                                            <md-datepicker ng-model="claim.serviceTo" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
+                                            <md-datepicker ng-keyup="clearDatepickerKeyupValue($event);" ng-model="claim.serviceTo" md-hide-icons="triangle" md-open-on-focus></md-datepicker>
                                         </md-input-container>
                                     </div>
                                     <div class="float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;width: 20% !important;">
