--- a/resources/finalization/view/finalization.html
+++ b/resources/finalization/view/finalization.html
@@ -8,15 +8,18 @@
                 <div layout-gt-sm="row">
                     <div class="col-sm-3">
                         <md-input-container flex-gt-sm>
-                            <label>Provider</label>
-                            <input ng-model="Provider">
+                            <label>Payment Reference</label>
+                            <input ng-model="paymentReference">
                         </md-input-container>
                     </div>
                     <div class="col-sm-3" style="border-left: 1px solid #e6e6e6;">
                         <md-input-container flex-gt-sm>
-                            <label>Select Batch</label>
-                            <input ng-model="SelectBatch">
-                        </md-input-container>
+                            <label>Payment Way</label>
+                            <md-select ng-model="paymentWay">
+                                    <md-option value="cheque">Cheque</md-option>
+                                    <md-option value="iban">Iban</md-option>
+                            </md-select>
+                         </md-input-container>
                     </div>
                     <div class="col-sm-3" style="border-left: 1px solid #e6e6e6;">
                         <md-input-container flex-gt-sm>
@@ -24,17 +27,16 @@
                             <input ng-model="BatchId">
                         </md-input-container>
                     </div>
-                    <!-- <div class="col-sm-2" style="border-left: 1px solid #e6e6e6; min-width:230px;">
-                        <md-input-container flex-gt-sm>
-                            <label>Batch Filename</label>
-                            <input ng-model="BatchFileName">
-                        </md-input-container>
-                    </div> -->
+
                     <div class="searchColm align-middle text-center col-sm-3">
                         <a ng-click="click()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
                             <span class="oi align-middle" data-glyph="magnifying-glass"></span> Search
                         </a>
-                    </div>
+                        <a ng-click="clear()" href="javascript:;" class="searBtn searBtnWithText mt-3 ml-3 mr-3 align-middle">
+                                Clear
+                        </a>
+                       
+                  </div>
                 </div>
             </div>
         </div>
@@ -44,11 +46,10 @@
                     <div class="col-12">
                         <div class="p-3" id="finilizationCont">
                             <div class="resultInfo pl-2">
-                                <strong class="d-inline-block pr-3">Search Result :</strong>
-                                <span class="d-inline-block pr-5">{{recordTotal}} Result Found</span>
-                                <div class="d-inline-block pl-5">Sort:</div>
+                                    <span ng-click="selectAll()" class="align-middle selectline"><a href="javascript:;" id="seltAll" style="font-size:75%;">{{selectall ? 'De-SelectAll' : 'Select All'}}</a></span>
+                                <span class="d-inline-block pl-5">Sort:</span>
                                 <select class="custom-select innerFilterSort" ng-change="sorting(option)" ng-model="option">
-                                    <option value=""> Select</option>
+                                   
                                     <option value="receivedDateDesc">By Date Asc</option>
                                     <option value="receivedDate">By Date Desc</option>
                                 </select>
@@ -62,13 +63,15 @@
                                         </td>
                                     </tr>
                                     <tr ng-repeat="d in data | orderBy:orderByField:reverseSort">
+                                            <td class="align-middle">
+                                                    <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : d.selected}" aria-label="Select" ng-click="d.selected = !d.selected;">
+                                                       <span class="oi align-middle l-8" data-glyph="check"></span>
+                                                   </a>
+                                               </td>
                                         <td>
                                             <div class="d-inline-block pr-2">Claim Number: 
                                                 <span class="currencyTypeCustom">{{d.batch}}</span>
                                             </div>
-                                            <!-- <div class="text-nowrap">
-                                                <strong class="d-inline-block">Batch file Name: {{d.batchFileName}}</strong>
-                                            </div> -->
                                             <div class="text-nowrap clearfix">
                                                 <span class="oi"></span>
                                                 <div class="receiveInfo d-inline-block pr-3 float-left">
@@ -77,55 +80,41 @@
                                                 <div class="statusInfo d-inline-block float-left" ng-class="{'text-danger' : d.status == 'Rejected', 'text-success' : d.status == 'Approved'}">
                                                     <span class="oi" data-glyph="thumb-down"></span> {{d.status == 'Rejected' ? 'Rejected' : 'Approved'}}
                                                 </div>
-                                                <!-- <div ng-if="d.status == 'Approved'" class="statusInfo d-inline-block text-success float-right">
-                                                    <span class="oi" data-glyph="thumb-up"></span> Approved
-                                                </div> -->
                                             </div>
                                         </td>
                                         <td>
-                                            <!-- <div class="text-nowrap">
-                                                <span class="tablLal">Paid To Provider Code:</span>
-                                                <span class="tablCont">{{d.PaidToProviderCode}}</span>
-                                            </div>
-                                            <div class="text-nowrap">
-                                                <span class="tablLal">Paid To Provider Name:</span>
-                                                <span class="tablCont">{{d.PaidToProviderName}}</span>
-                                            </div> -->
                                             <div class="text-nowrap">
                                                 <span class="tablLal" style="display: contents !important;">Paid To:</span>
                                                 <span class="tablCont">{{d.PaidTo}}</span>
                                             </div>
                                         </td>
-                                        <td class="processedStatus">
-                                            <!-- <div class="btn btn-outline-success btn-sm d-block">Processed: {{d.Processed}}</div>
-                                            <div class="btn btn-outline-danger btn-sm d-block">Un Processed: {{d.unProcessed}}</div> -->
-                                        </td>
                                         <td>
                                             <div class="text-nowrap">
-                                                <strong class="tablLal tablLal1">Rejected Amount:</strong>
+                                                <strong class="tablLal tablLal1">{{d.status=="Approved" ? 'ApprovedAmount' : 'RejectedAmount'}}</strong>
                                                 <strong>Rs.{{d.rejectedAmount}}</strong>
+                                                 
+                                                <!-- {{'RejectedAmount':d.status=='Rejected','ApprovedAmount':d.status=='Approved'}} -->
                                             </div>
-                                            <!-- <div class="text-nowrap">
-                                                <strong class="tablLal tablLal1">Batch Paid Amount:</strong>
-                                                <strong>Rs.{{d.batchPaidAmount}}</strong>
-                                            </div> -->
                                             <div class="text-nowrap">
                                                 <strong class="tablLal tablLal1">Payment Way:</strong>
                                                 <strong>{{d.paymentWay}}</strong>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="text-nowrap">
+                                                <strong class="tablLal tablLal1">Payment Date:</strong>
+                                                <strong>{{d.paymentDate}} </strong>
+                                            </div>
+                                            <div class="text-nowrap">
+                                                <strong class="tablLal tablLal1">Payment Reference: </strong>
+                                                <strong>{{d.paymentReference}}</strong>
                                             </div>
                                         </td>
                                         <td class="text-right">
                                             <div class="text-nowrap">
                                                 Total Claims
                                                 <h4>Rs.{{d.totalClaims}}</h4>
-                                                Payment Date: {{d.paymentDate}} <br /> Payment Reference: {{d.paymentReference}}
                                             </div>
-                                        </td>
-                                        <td class="align-middle">
-                                            <!-- <a href="javascript:;" class="btn btn-primary btn-sm finlizeBtn" ng-click="d.final = !d.final" ng-class="{Finalize :d.final}">Finalize</a> -->
-                                            <a href="javascript:;" class="custSelectBtn" ng-class="{custSelectBtnSected : d.selected}" aria-label="Select" ng-click="d.selected = !d.selected;">
-                                                <span class="oi align-middle l-8" data-glyph="check"></span>
-                                            </a>
                                         </td>
                                     </tr>
                                 </tbody>
